added Veggies add/removal and reorganized the styling of the main page

--- a/mystyle.css
+++ b/mystyle.css
@@ -1,10 +1,26 @@
+body {
+  display: flex;
+  flex-direction: row;
+}
+
 #main-display {
   display: flex;
   flex-direction: column;
 }
 
-select {
-  width: 100px;
-  overflow: hidden;
-  border: 1px solid gray;
+#total-order {
+  display: flex;
+  flex-basis: 45%;
+  justify-content: center;
+  align-items: center;
+}
+
+#total-order > p {
+  font-size: 1.4rem;
+}
+
+
+#total-order > p > span {
+  color: red;
+  font-size: 1.4rem;
 }
